--- a/src/pages/realisations.html
+++ b/src/pages/realisations.html
@@ -3,23 +3,23 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>StudioHelp - Accueil</title>
+  <title>StudioHelp - Réalisation</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.min.css" media="all">
+  <link rel="stylesheet" href="../assets/css/style.min.css" media="all">
 </head>
 
 <body>
 
-  <div id="smoothStateContent" class="mainPage">
+  <div id="smoothStateContent" class="works">
 
     <header id="header">
       <div class="logo">
-        <a href="index.html" title="Accueil"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
+        <a href="../index.html" title="Accueil"><img src="../assets/img/logo_red.png" alt="StudioHelp" /></a>
       </div>
       <nav class="menu">
         <ul>
-          <li><a href="index.html" title="Accueil">Accueil</a></li>
-          <li><a href="pages/realisations.html" title="Réalisation">Réalisations</a></li>
+          <li><a href="../index.html" title="Accueil">Accueil</a></li>
+          <li><a href="realisations.html" title="Réalisation">Réalisations</a></li>
           <li><a href="#" title="Instruments">Instruments</a></li>
           <li><a href="#" title="À propos">À propos</a></li>
           <li><a href="#" title="Contact">Contact</a></li>
@@ -28,14 +28,14 @@
     </header>
 
     <main>
-      <div class="blackFilter"></div>
+
     </main>
 
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="vendors/smoothState.min.js"></script>
-  <script src="assets/js/main.min.js"></script>
+  <script src="../vendors/smoothState.min.js"></script>
+  <script src="../assets/js/main.min.js"></script>
 </body>
 
 </html>
