--- a/src/index.html
+++ b/src/index.html
@@ -3,34 +3,42 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>StudioHelp - Accueil</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Condensed:400,700" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.min.css" media="all">
 </head>
 
 <body>
 
-  <div id="smoothStateContent" class="mainPage">
-
-    <header id="header">
-      <div class="logo">
-        <a href="index.html" title="Accueil"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
+  <div id="smoothStateContent" class="content">
+    <header>
+      <div class="responsiveHeader">
+        <div class="logo">
+          <a href="index.html" title="Accueil"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
+        </div>
+        <button class="hamburger hamburger--squeeze" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
       </div>
       <nav class="menu">
         <ul>
-          <li><a href="index.html" title="Accueil">Accueil</a></li>
-          <li><a href="pages/realisations.html" title="Réalisation">Réalisations</a></li>
+          <li class="selected"><a href="index.html" title="Accueil">Accueil</a></li>
+          <li><a href="realisations.html" title="Réalisation">Réalisations</a></li>
           <li><a href="#" title="Instruments">Instruments</a></li>
           <li><a href="#" title="À propos">À propos</a></li>
           <li><a href="#" title="Contact">Contact</a></li>
         </ul>
       </nav>
     </header>
-
-    <main>
-      <div class="blackFilter"></div>
+    <main class="mainPage fadeIn">
+      <video autoplay loop>
+        <source src="assets/video/main.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
     </main>
-
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
