SmoothState.js modification

--- a/src/stade-de-france.html
+++ b/src/stade-de-france.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>StudioHelp - Réalisation</title>
+  <title>StudioHelp - Accueil</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Condensed:400,700" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.min.css" media="all">
 </head>
@@ -23,6 +23,7 @@
         </span>
       </button>
       </div>
+
       <nav class="menu">
         <ul>
           <li><a href="index.html" title="Accueil" data-animation-duration="150">Accueil</a></li>
@@ -32,11 +33,10 @@
           <li><a href="#" title="Contact" data-animation-duration="150">Contact</a></li>
         </ul>
       </nav>
+
     </header>
-    <main class="works">
-      <div class="itemWork"><a href="stade-de-france.html" title="1" data-animation-duration="500"><span>1</span></a></div>
-      <div class="itemWork"><a href="#" title="2" data-animation-duration="5000"><span>2</span></a></div>
-      <div class="itemWork"><a href="#" title="3" data-animation-duration="5000"><span>3</span></a></div>
+    <main class="sampleWork work1">
+
     </main>
   </div>
 
