--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="responsiveHeader">
         <div class="logo">
-          <a href="index.html" title="Accueil"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
+          <a href="index.html" title="Accueil" data-animation-duration="150"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
         </div>
         <button class="hamburger hamburger--squeeze" type="button">
         <span class="hamburger-box">
@@ -25,15 +25,18 @@
       </div>
       <nav class="menu">
         <ul>
-          <li class="selected"><a href="index.html" title="Accueil">Accueil</a></li>
-          <li><a href="realisations.html" title="Réalisation">Réalisations</a></li>
-          <li><a href="#" title="Instruments">Instruments</a></li>
-          <li><a href="#" title="À propos">À propos</a></li>
-          <li><a href="#" title="Contact">Contact</a></li>
+          <li class="selected"><a href="index.html" title="Accueil" data-animation-duration="150">Accueil</a></li>
+          <li><a href="realisations.html" title="Réalisation" data-animation-duration="150">Réalisations</a></li>
+          <li><a href="#" title="Instruments" data-animation-duration="150">Instruments</a></li>
+          <li><a href="#" title="À propos" data-animation-duration="150">À propos</a></li>
+          <li><a href="#" title="Contact" data-animation-duration="150">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <main class="mainPage fadeIn">
+    <main class="mainPage">
+      <div class="blackLayer">
+        <p>Aide à l'<b>enregistrement</b>, à la <b>création <br/>musicale</b> et <b>vidéo</b> en home studio <b>professionnel</b></p>
+      </div>
       <video autoplay loop>
         <source src="assets/video/main.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -42,7 +45,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="vendors/smoothState.min.js"></script>
+  <script src="vendors/smoothState.js"></script>
   <script src="assets/js/main.min.js"></script>
 </body>
 
