--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="responsiveHeader">
         <div class="logo">
-          <a href="index.html" title="Accueil" data-animation-duration="150"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
+          <a href="index.html" title="Accueil" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
         </div>
         <button class="hamburger hamburger--squeeze" type="button">
         <span class="hamburger-box">
@@ -25,11 +25,11 @@
       </div>
       <nav class="menu">
         <ul>
-          <li class="selected"><a href="index.html" title="Accueil" data-animation-duration="150">Accueil</a></li>
-          <li><a href="realisations.html" title="Réalisation" data-animation-duration="150">Réalisations</a></li>
-          <li><a href="#" title="Instruments" data-animation-duration="150">Instruments</a></li>
-          <li><a href="#" title="À propos" data-animation-duration="150">À propos</a></li>
-          <li><a href="#" title="Contact" data-animation-duration="150">Contact</a></li>
+          <li class="selected"><a href="#" title="Accueil">Accueil</a></li>
+          <li><a href="realisations.html" title="Réalisation" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Réalisations</a></li>
+          <li><a href="#" title="Instruments" data-animation-duration="150" data-animation-before="fade">Instruments</a></li>
+          <li><a href="#" title="À propos" data-animation-duration="150" data-animation-before="fade">À propos</a></li>
+          <li><a href="#" title="Contact" data-animation-duration="150" data-animation-before="fade">Contact</a></li>
         </ul>
       </nav>
     </header>
