--- a/src/realisations.html
+++ b/src/realisations.html
@@ -15,7 +15,7 @@
     <header>
       <div class="responsiveHeader">
         <div class="logo">
-          <a href="index.html" title="Accueil" data-animation-duration="150"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
+          <a href="index.html" title="Accueil" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
         </div>
         <button class="hamburger hamburger--squeeze" type="button">
         <span class="hamburger-box">
@@ -25,8 +25,8 @@
       </div>
       <nav class="menu">
         <ul>
-          <li><a href="index.html" title="Accueil" data-animation-duration="150">Accueil</a></li>
-          <li class="selected"><a href="realisations.html" title="Réalisation" data-animation-duration="150">Réalisations</a></li>
+          <li><a href="index.html" title="Accueil" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Accueil</a></li>
+          <li class="selected"><a href="#" title="Réalisation">Réalisations</a></li>
           <li><a href="#" title="Instruments" data-animation-duration="150">Instruments</a></li>
           <li><a href="#" title="À propos" data-animation-duration="150">À propos</a></li>
           <li><a href="#" title="Contact" data-animation-duration="150">Contact</a></li>
@@ -34,9 +34,9 @@
       </nav>
     </header>
     <main class="works">
-      <div class="itemWork"><a href="stade-de-france.html" title="1" data-animation-duration="500"><span>1</span></a></div>
-      <div class="itemWork"><a href="#" title="2" data-animation-duration="5000"><span>2</span></a></div>
-      <div class="itemWork"><a href="#" title="3" data-animation-duration="5000"><span>3</span></a></div>
+      <div class="itemWork"><a href="stade-de-france.html" title="1" data-animation-duration="500" data-animation-before="extend-1" data-animation-after="none"><span>1</span></a></div>
+      <div class="itemWork"><a href="stade-de-france.html" title="2" data-animation-duration="500" data-animation-before="extend-2" data-animation-after="none"><span>2</span></a></div>
+      <div class="itemWork"><a href="stade-de-france.html" title="3" data-animation-duration="500" data-animation-before="extend-3" data-animation-after="none"><span>3</span></a></div>
     </main>
   </div>
 
