--- a/src/stade-de-france.html
+++ b/src/stade-de-france.html
@@ -15,7 +15,7 @@
     <header>
       <div class="responsiveHeader">
         <div class="logo">
-          <a href="index.html" title="Accueil" data-animation-duration="150"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
+          <a href="index.html" title="Accueil" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade"><img src="assets/img/logo_red.png" alt="StudioHelp" /></a>
         </div>
         <button class="hamburger hamburger--squeeze" type="button">
         <span class="hamburger-box">
@@ -26,7 +26,7 @@
 
       <nav class="menu">
         <ul>
-          <li><a href="index.html" title="Accueil" data-animation-duration="150">Accueil</a></li>
+          <li><a href="index.html" title="Accueil" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Accueil</a></li>
           <li class="selected"><a href="realisations.html" title="Réalisation" data-animation-duration="150">Réalisations</a></li>
           <li><a href="#" title="Instruments" data-animation-duration="150">Instruments</a></li>
           <li><a href="#" title="À propos" data-animation-duration="150">À propos</a></li>
