About, contact, instruments

--- a/src/realisations.html
+++ b/src/realisations.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>StudioHelp - Réalisation</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Condensed:400,700" rel="stylesheet">
+  <title>StudioHelp - Réalisations</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto+Condensed:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="vendors/audio.min.css" media="all">
   <link rel="stylesheet" href="assets/css/style.min.css" media="all">
 </head>
 
@@ -26,22 +27,24 @@
       <nav class="menu">
         <ul>
           <li><a href="index.html" title="Accueil" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Accueil</a></li>
-          <li class="selected"><a href="#" title="Réalisation">Réalisations</a></li>
-          <li><a href="#" title="Instruments" data-animation-duration="150">Instruments</a></li>
-          <li><a href="#" title="À propos" data-animation-duration="150">À propos</a></li>
-          <li><a href="#" title="Contact" data-animation-duration="150">Contact</a></li>
+          <li class="selected"><a href="#" title="Réalisations">Réalisations</a></li>
+          <li><a href="instruments.html" title="Instruments" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Instruments</a></li>
+          <li><a href="a-propos.html" title="À propos" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">À propos</a></li>
+          <li><a href="contact.html" title="Contact" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main class="works">
-      <div class="itemWork"><a href="stade-de-france.html" title="1" data-animation-duration="500" data-animation-before="extend-1" data-animation-after="none"><span>1</span></a></div>
-      <div class="itemWork"><a href="stade-de-france.html" title="2" data-animation-duration="500" data-animation-before="extend-2" data-animation-after="none"><span>2</span></a></div>
-      <div class="itemWork"><a href="stade-de-france.html" title="3" data-animation-duration="500" data-animation-before="extend-3" data-animation-after="none"><span>3</span></a></div>
+      <h2>Réalisations</h2>
+      <div class="itemWork"><a href="stade-francais.html" title="Stade Français" data-animation-duration="600" data-animation-before="extend-1" data-animation-after="none"><span>Stade Français</span></a></div>
+      <div class="itemWork"><a href="brice-faradji.html" title="Brice Faradji" data-animation-duration="600" data-animation-before="extend-2" data-animation-after="none"><span>Brice Faradji</span></a></div>
+      <div class="itemWork"><a href="yaniss-odua.html" title="Yaniss Odua" data-animation-duration="600" data-animation-before="extend-3" data-animation-after="none"><span>Yaniss Odua</span></a></div>
     </main>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="vendors/smoothState.js"></script>
+  <script src="vendors/audio.min.js"></script>
   <script src="assets/js/main.min.js"></script>
 </body>
 
