--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>StudioHelp - Accueil</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Condensed:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto+Condensed:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="vendors/audio.min.css" media="all">
   <link rel="stylesheet" href="assets/css/style.min.css" media="all">
 </head>
 
@@ -26,10 +27,10 @@
       <nav class="menu">
         <ul>
           <li class="selected"><a href="#" title="Accueil">Accueil</a></li>
-          <li><a href="realisations.html" title="Réalisation" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Réalisations</a></li>
-          <li><a href="#" title="Instruments" data-animation-duration="150" data-animation-before="fade">Instruments</a></li>
-          <li><a href="#" title="À propos" data-animation-duration="150" data-animation-before="fade">À propos</a></li>
-          <li><a href="#" title="Contact" data-animation-duration="150" data-animation-before="fade">Contact</a></li>
+          <li><a href="realisations.html" title="Réalisations" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Réalisations</a></li>
+          <li><a href="instruments.html" title="Instruments" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Instruments</a></li>
+          <li><a href="a-propos.html" title="À propos" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">À propos</a></li>
+          <li><a href="contact.html" title="Contact" data-animation-duration="150" data-animation-before="fade" data-animation-after="fade">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -46,6 +47,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="vendors/smoothState.js"></script>
+  <script src="vendors/audio.min.js"></script>
   <script src="assets/js/main.min.js"></script>
 </body>
 
